--- a/KriddieFolder/ANTE_moreGeomorph_2022-06-05.Rmd
+++ b/KriddieFolder/ANTE_moreGeomorph_2022-06-05.Rmd
@@ -26,69 +26,24 @@ library(data.table)
 make a another  data frame with rest of the geomorphdata - width, depth, and some notes relating to wetland/waterfall stuff
 
 Start by reading in most recent synoptic data
-
-```{r add function}
-##arrange df vars by position
-##'vars' must be a named vector, e.g. c("var.name"=1)
-arrange.vars <- function(data, vars){
-    ##stop if not a data.frame (but should work for matrices as well)
-    stopifnot(is.data.frame(data))
-
-    ##sort out inputs
-    data.nms <- names(data)
-    var.nr <- length(data.nms)
-    var.nms <- names(vars)
-    var.pos <- vars
-    ##sanity checks
-    stopifnot( !any(duplicated(var.nms)), 
-               !any(duplicated(var.pos)) )
-    stopifnot( is.character(var.nms), 
-               is.numeric(var.pos) )
-    stopifnot( all(var.nms %in% data.nms) )
-    stopifnot( all(var.pos > 0), 
-               all(var.pos <= var.nr) )
-
-    ##prepare output
-    out.vec <- character(var.nr)
-    out.vec[var.pos] <- var.nms
-    out.vec[-var.pos] <- data.nms[ !(data.nms %in% var.nms) ]
-    stopifnot( length(out.vec)==var.nr )
-
-    ##re-arrange vars by position
-    data <- data[ , out.vec]
-    return(data)
-}
-```
-
 ```{r read in data}
-#df_prediction <- read.csv(here::here("ProcessedData/COLMILLO_synoptic_2022-03-24.csv"))
-df_prediction <- read.csv(here::here("ProcessedData/COLMILLO_synoptic_2022-06-04.csv"))
-df_prediction$X <- NULL
-df_prediction$lat <- NULL
-df_prediction$lon_dist <- NULL
-df_prediction$lat_dist <- NULL
-df_prediction$lon <- NULL
-df_prediction$ele <- NULL
-df_prediction$time <- NULL
-
-df_prediction <- unique(df_prediction)
-df_prediction <- df_prediction%>%filter(dist_diff>0)
+#df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-02-18.csv"))
+#df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-03-23.csv"))
+#df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-04-19.csv"))
+df_prediction <- read.csv(here::here("ProcessedData/ANTE_synoptic_2022-06-04.csv"))
+df_prediction$X <-NULL
 
 ggplot(data=df_prediction, aes(dist, ele_fit, color=log10(CO2_ppm_ave)),size=5) +
-  geom_point(size=5)
-
-ggplot(data=df_prediction, aes(lon_fit, lat_fit, color=log10(CO2_ppm_ave)),size=5) +
   geom_point(size=5)
 ```
 #read in x, w, d data frame
 
 ```{r x and w and d, echo=FALSE}
-XWD <- read.csv(here::here("Geomorphology/Colmillo/COLM_geomorph_2022-01-28.csv"))
+XWD <- read.csv(here::here("Geomorphology/Atenas/Antenas_Geomorph_2022-01-28.csv"))
 
 XWD <- XWD[,c("lon","lat","x","d","w","ele","notes")]
 
 #oh what rotten luck. XWD data was collected downstream to upstream and df_prediction is opposite. Let use right this wrong
-#also the distances are all messed up because of the gavi wetland, so we will reverse order one at a time
 
 XWD <- XWD[order(XWD$x),]
 XWD$x_diff <- NA
@@ -100,6 +55,7 @@ for(i in 1:nrow(XWD)) {       # for-loop over rows
     XWD[i,"x_diff"] <-   XWD[i,"x"] - XWD[i-1,"x"]
   }
 }
+
 XWD <- XWD[order(-XWD$x),]
 XWD$x_new <- NA
 for(i in 1:nrow(XWD)) {       # for-loop over rows
@@ -109,7 +65,6 @@ for(i in 1:nrow(XWD)) {       # for-loop over rows
     XWD[i,"x_new"] <-   XWD[i-1,"x_diff"] + XWD[i-1,"x_new"]
   }
 }
-
 #great. now get rid of the stuff you don't want
 XWD <- XWD[,c("lon","lat","x_new","d","w","ele","notes")]
 names(XWD)[names(XWD) == 'x_new'] <- 'x'
@@ -120,12 +75,8 @@ names(XWD)[names(XWD) == 'x_new'] <- 'x'
 now we snap XWD data to prediction
 
 ```{r snap XDW, echo=FALSE}
-df_prediction <- arrange.vars(df_prediction, c("lon_fit"=1))
-#seeing some problems around GAVI wetland. Distance don't match up. So we will restart distance 
 
 XWD_1 <- XWD %>%drop_na(lon)
-#XWD_2 <- XWD
-#XWD_2$x[which(XWD_2$x>1043)] <- XWD_2$x[which(XWD_2$x>1043)] - (1045 - 507.6455874)
 
 x <- SpatialPoints(XWD_1[,c(1:2)])
 y <- SpatialPoints(df_prediction[,c(1:2)]) 
@@ -215,25 +166,50 @@ setDT(XWD_fit)
 df_prediction_3 <- df_prediction_2[XWD_fit, roll = "nearest", on = "x_pred"]
 
 # now we calculate surface area of each width measurment using trapazoid method
-
+##something a little complicated about antenas is that there is no stream between 410 and 365,so that should not be included in the area
+    # I think I'll just hard program that in if I can
 
 df <- df_prediction_3%>%drop_na(w)
 df$midpoint <- NA
 df$length <- NA
 df$area <- NA
 
+#run this 2x for some reason (but no more than 2x!) make sure area column is filled in and reasonable
+
 for(i in 1:nrow(df)) {       # for-loop over rows
   if (i==1) {
     df$midpoint[i] <- 0
     df$length[i] <- (df$dist[i+1] + (df$dist[i] - df$dist[i+1])/2) - 0
     df$area[i] <- df$length[i] * df$w[i]/100
-    
   } else {
     df$midpoint[i] <- df$dist[i-1] + (df$dist[i] - df$dist[i-1])/2
-    df$length[i-1] <- df$midpoint[i] - df$midpoint[i-1]
+    df$length[i] <- df$midpoint[i+1] - df$midpoint[i]
     df$area[i] <- df$length[i] * df$w[i]/100
   }
 }
+
+#
+for(i in 1:nrow(df)) {       # for-loop over rows
+  if (i==1) {
+    df$midpoint[i] <- 0
+    df$length[i] <- (df$dist[i+1] + (df$dist[i] - df$dist[i+1])/2) - 0
+    df$area[i] <- df$length[i] * df$w[i]/100
+  } else {
+    df$midpoint[i] <- df$dist[i-1] + (df$dist[i] - df$dist[i-1])/2
+    df$length[i] <- df$midpoint[i+1] - df$midpoint[i]
+    df$area[i] <- df$length[i] * df$w[i]/100
+  }
+}
+
+
+
+df$midpoint[which(df$x_pred==40)] <- (53.7102887 - 41.450288)/2 + 41.450288
+df$length[which(df$x_pred==40)] <- 53.7102887 - 41.450288
+df$area[which(df$x_pred==40)] <- df$w[which(df$x_pred==40)]/100 * df$length[which(df$x_pred==40)]
+
+df$midpoint[which(df$x_pred==95)] <- (108.0099436 - 3)
+df$length[which(df$x_pred==95)] <- 3
+df$area[which(df$x_pred==95)] <- df$w[which(df$x_pred==95)]/100 * df$length[which(df$x_pred==95)]
 
 df_prediction_3 <- df
 
@@ -249,6 +225,8 @@ we need to get synop data back in here. deep breath. here we go
 ```{r synop, echo=FALSE}
 
 ##find midpoint distance between synop measurments. Then add up all areas that fall between way points
+
+
 synop <- df_prediction[,c("lon_fit","lat_fit","dist","Flux_ave")]%>%drop_na(Flux_ave)
 synop <- synop[order(synop$dist),]
 
@@ -297,6 +275,8 @@ for(i in 1:nrow(synop)) {       # for-loop over rows
 
 df_prediction_4 <- left_join(df_prediction,synop[,c("lon_fit","lat_fit","dist","Flux_ave","midpoint","surface_area","flux_umolpers","Totalflux_umolpers")], by=c("lon_fit","lat_fit","dist","Flux_ave"))
 
+df_prediction_4 <- df_prediction_4[c(1:2,5,13:31)]
+
 
 
 ```
@@ -311,6 +291,6 @@ I now have some cra
 ggplot(data=df_prediction_4, aes(dist, Totalflux_umolpers),size=5) +
   geom_point(size=5)
 
-write.csv(df_prediction_4, here::here("ProcessedData/COLM_synopticGeom_2022-03-24.csv"))
+write.csv(df_prediction_4, here::here("ProcessedData/ANTE_synopticGeom_2022-06-04.csv"))
 
 ```
