--- a/KriddieFolder/COLM_Geomorphology_2022-06-04.Rmd
+++ b/KriddieFolder/COLM_Geomorphology_2022-06-04.Rmd
@@ -192,6 +192,7 @@ snap the points in our origional dama frame to bring in the elevation data
 #synop <- read.csv(here::here("Synoptic/COLMILLO_2022-01-27.csv"))
 #synop <- read.csv(here::here("Synoptic/COLMILLO_2022-02-14.csv"))
 #synop <- read.csv(here::here("Synoptic/COLMILLO_2022-03-24.csv"))
+#synop <- read.csv(here::here("Synoptic/COLMILLO_2022-04-19.csv"))
 synop <- read.csv(here::here("Synoptic/COLMILLO_2022-06-04.csv"))
 
 synop$X <- NULL
@@ -214,6 +215,7 @@ Geomorph$lat_fit <- pred$lat
 
 df_prediction <- full_join(df_prediction,Geomorph,by=c("lon_fit","lat_fit"))
 ```
+
 ```{r 3d plot and synop, echo=FALSE}
 
 df <- full_join(synop,Geomorph, by=c("lat","lon","ele")) 
