--- a/KriddieFolder/SynopFigures_2022-08-15.Rmd
+++ b/KriddieFolder/SynopFigures_2022-08-15.Rmd
@@ -45,6 +45,10 @@ Hypothesis: 2: Higher turbulence in larger streams will yield flux rates than sm
 synop <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-06-08.csv"))
 #df <- read.csv(here::here("ProcessedData/SynopFlowAccu_20220419.csv"))
 df <- read.csv(here::here("ProcessedData/SynopFlowAccu_20220626.csv"))
+k600_df <- read.csv(here::here("ProcessedData/ALL_synoptic_2022-08-26.csv"))
+#total flux for gavi tribs to add to bball plota
+Trib1 <- read.csv(here::here("ProcessedData/GAVItrib1_synopticGeom_2022-08-30.csv"))
+Trib2 <- read.csv(here::here("ProcessedData/GAVItrib2_synopticGeom_2022-08-30.csv"))
 
 df$X <- NULL
 #df <- unique(df)
@@ -78,6 +82,26 @@ df$Wetland_3[df$Wetland == "Gavi-mainstem"] <- "Gavilan River Network"
 
 
 df$Wetland_3 <- as.factor(df$Wetland_3)
+
+#k600
+
+
+
+k600_df$Wetland_2 <- k600_df$Wetland
+k600_df$Wetland_2 <- as.character(k600_df$Wetland_2)
+
+k600_df$Wetland_2[k600_df$Wetland == "GAVItrib1"] <- "Gavilan Tributaries"
+k600_df$Wetland_2[k600_df$Wetland == "GAVItrib2"] <- "Gavilan Tributaries"
+k600_df$Wetland_2[k600_df$Wetland == "GAVItrib3"] <- "Gavilan Tributaries"
+k600_df$Wetland_2[k600_df$Wetland == "GAVI"] <- "Gavilan Mainstem"
+k600_df$Wetland_2[k600_df$Wetland == "ANTE"] <- "Antenas"
+k600_df$Wetland_2[k600_df$Wetland == "COLM"] <- "Colmillo"
+k600_df$Wetland_2 <- as.factor(k600_df$Wetland_2)
+
+
+#tribstuff
+Trib1$Wetland <- "Tributary 1"
+Trib2$Wetland <- "Tributary 2"
 
 ```
 
@@ -229,11 +253,17 @@ summary(anova.co2)
 anova.flux <- aov(Flux_ave ~ Wetland_2, data = df)
 summary(anova.flux)
 
+anova.k600 <- aov(K600.effective ~ Wetland_2, data = k600_df%>%filter(K600.effective>-30) )
+summary(anova.k600)
+
 tukey.flux<-TukeyHSD(anova.flux)
 tukey.flux
 
 tukey.co2<-TukeyHSD(anova.co2)
 tukey.co2
+
+tukey.k600<-TukeyHSD(anova.k600)
+tukey.k600
 
 MyTheme <-  theme_bw() + 
   theme(
@@ -253,10 +283,10 @@ CO2 <- ggplot(df, aes(x = Wetland_2, y = log10(adjusted_ppm), fill = Wetland_2))
   ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
   scale_fill_discrete(name=NULL)+
   scale_y_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000"))  +
-  annotate("text", x="Gavilan Tributaries", y= log10(18000),label="B", size = 8) +
-  annotate("text", x="Antenas", y= log10(18000),label="A", size = 8) +
-  annotate("text", x="Gavilan Mainstem", y= log10(18000),label="A", size = 8) +
-  annotate("text", x="Colmillo", y= log10(18000),label="A", size = 8)
+  annotate("text", x="Gavilan Tributaries", y= log10(18000),label="B", size = 5) +
+  annotate("text", x="Antenas", y= log10(18000),label="A", size = 5) +
+  annotate("text", x="Gavilan Mainstem", y= log10(18000),label="A", size = 5) +
+  annotate("text", x="Colmillo", y= log10(18000),label="A", size = 5)
 
 
 flux <- ggplot(df, aes(x = Wetland_2, y = Flux_ave, fill = Wetland_2)) + 
@@ -266,22 +296,35 @@ flux <- ggplot(df, aes(x = Wetland_2, y = Flux_ave, fill = Wetland_2)) +
   MyTheme +
     ylab(expression(paste("CO"[2]," Flux [",mu,"mol ", m^-2, s^-1,"]"))) +
   scale_fill_discrete(name=NULL) +
-  annotate("text", x="Gavilan Tributaries", y= 5,label="BC", size = 8) +
-  annotate("text", x="Antenas", y= 5,label="A", size = 8) +
-  annotate("text", x="Gavilan Mainstem", y= 5,label="AC", size = 8) +
-  annotate("text", x="Colmillo", y= 5,label="B", size = 8)
+  annotate("text", x="Gavilan Tributaries", y= 5,label="BC", size = 5) +
+  annotate("text", x="Antenas", y= 5,label="A", size = 5) +
+  annotate("text", x="Gavilan Mainstem", y= 5,label="AC", size = 5) +
+  annotate("text", x="Colmillo", y= 5,label="B", size = 5)
+
+k600 <- ggplot(k600_df%>%filter(K600.effective>-30)
+               , aes(x = Wetland_2, y = K600.effective, fill = Wetland_2)) + 
+  geom_boxplot() +
+  geom_jitter(shape=1,position=position_jitter(0.1)) +
+   stat_summary(fun = "mean", geom = "point", shape = 23, size = 3, color = "black",fill="white")+
+  MyTheme +
+    ylab(expression(paste(italic('k')[600]," [m ", d^-1,"]"))) +
+  scale_fill_discrete(name=NULL) +
+  annotate("text", x="Gavilan Tributaries", y= 155,label="A", size = 5) +
+  annotate("text", x="Antenas", y= 155,label="A", size = 5) +
+  annotate("text", x="Gavilan Mainstem", y= 155,label="A", size = 5) +
+  annotate("text", x="Colmillo", y= 155,label="B", size = 5)
 
 
 require(grid)  
 
 
 
-figure <- ggarrange(CO2 , flux,  
-                    labels = c("A","B"),
-                    ncol = 1, nrow = 2,
+figure <- ggarrange(CO2 , flux,  k600,
+                    labels = c("A","B","C"),
+                    ncol = 1, nrow = 3,
                     common.legend = TRUE, legend = "right",
                     align = "hv", 
-                    font.label = list(size = 25, color = "black", face = "bold", family = NULL, position = "top"))
+                    font.label = list(size = 20, color = "black", face = "bold", family = NULL, position = "top"))
 
 figure
 
@@ -370,8 +413,163 @@ ggsave("controls_2.png", plot = figure, device = NULL, path = NULL,
 
 ```
 
-```{r fig 4, echo=FALSE}
+bring in gavi tribs 1 and 2 data
 
+
+
+ calculated mid row for plotting of sample points
+
+```{r add mid row, echo=FALSE}
+#ANTE
+ANTE <- df%>%filter(Wetland=="ANTE")
+ANTE <- ANTE[order(ANTE$dist),] 
+for (row in 1:nrow(ANTE)) {
+  ANTE$dist_mid[row] <- (ANTE$dist[row+1] - ANTE$dist[row])/2 + ANTE$dist[row]
+  ANTE$TotalFlux_mid[row] <- (ANTE$Totalflux_umolpers[row+1] - ANTE$Totalflux_umolpers[row])/2 + ANTE$Totalflux_umolpers[row]
+  }
+
+ANTE$dist_mid <- NA
+ANTE$TotalFlux_mid <- NA
+
+
+for (row in 1:nrow(ANTE)) { 
+  if(row==1){
+    ANTE$dist_mid[row] <-  0
+     ANTE$TotalFlux_mid[row] <- 0
+    } else{
+  ANTE$dist_mid[row] <- (ANTE$dist[row] - ANTE$dist[row-1])/2 + ANTE$dist[row-1]
+  ANTE$TotalFlux_mid[row] <- (ANTE$Totalflux_umolpers[row] - ANTE$Totalflux_umolpers[row-1])/2 + ANTE$Totalflux_umolpers[row-1]
+  }
+}
+#GAVI-mainstem
+df_trash <- df%>%filter(Wetland=="Gavi-mainstem")
+df_trash <- df_trash[order(df_trash$dist),] 
+for (row in 1:nrow(df_trash)) {
+  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
+  }
+
+df_trash$dist_mid <- NA
+df_trash$TotalFlux_mid <- NA
+
+
+for (row in 1:nrow(df_trash)) { 
+  if(row==1){
+    df_trash$dist_mid[row] <-  0
+     df_trash$TotalFlux_mid[row] <- 0
+    } else{
+  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
+  }
+}
+GAVI <- df_trash
+GAVI <- GAVI%>%filter(dist_mid < 300 | dist_mid > 400)
+
+#	COLMILLO
+df_trash <- df%>%filter(Wetland=="COLM")
+df_trash <- df_trash[order(df_trash$dist),] 
+for (row in 1:nrow(df_trash)) {
+  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
+  }
+
+df_trash$dist_mid <- NA
+df_trash$TotalFlux_mid <- NA
+
+
+for (row in 1:nrow(df_trash)) { 
+  if(row==1){
+    df_trash$dist_mid[row] <-  0
+     df_trash$TotalFlux_mid[row] <- 0
+    } else{
+  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
+  }
+}
+COLM <- df_trash
+COLM
+
+#	GAVI Trib 1
+df_trash <- Trib1
+df_trash <- df_trash[order(df_trash$dist),] 
+for (row in 1:nrow(df_trash)) {
+  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
+  }
+
+df_trash$dist_mid <- NA
+df_trash$TotalFlux_mid <- NA
+
+
+for (row in 1:nrow(df_trash)) { 
+  if(row==1){
+    df_trash$dist_mid[row] <-  0
+     df_trash$TotalFlux_mid[row] <- 0
+    } else{
+  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
+  }
+}
+Trib1 <- df_trash
+
+#	GAVI Trib 2
+df_trash <- Trib2
+df_trash <- df_trash[order(df_trash$dist),] 
+for (row in 1:nrow(df_trash)) {
+  df_trash$dist_mid[row] <- (df_trash$dist[row+1] - df_trash$dist[row])/2 + df_trash$dist[row]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row+1] - df_trash$Totalflux_umolpers[row])/2 + df_trash$Totalflux_umolpers[row]
+  }
+
+df_trash$dist_mid <- NA
+df_trash$TotalFlux_mid <- NA
+
+
+for (row in 1:nrow(df_trash)) { 
+  if(row==1){
+    df_trash$dist_mid[row] <-  0
+     df_trash$TotalFlux_mid[row] <- 0
+    } else{
+  df_trash$dist_mid[row] <- (df_trash$dist[row] - df_trash$dist[row-1])/2 + df_trash$dist[row-1]
+  df_trash$TotalFlux_mid[row] <- (df_trash$Totalflux_umolpers[row] - df_trash$Totalflux_umolpers[row-1])/2 + df_trash$Totalflux_umolpers[row-1]
+  }
+}
+Trib2 <- df_trash
+
+
+df2 <- rbind(ANTE,COLM,GAVI)
+df2$Totalflux_umolpers <- df2$TotalFlux_mid
+df2$dist <- df2$dist_mid
+df2$shape <- "shape"
+
+df$shape <- NA
+df$dist_mid <- NA
+df$TotalFlux_mid <- NA
+
+df <- rbind(df,df2)
+
+
+df3 <- rbind(Trib1,Trib2)
+df3$Totalflux_umolpers <- df3$TotalFlux_mid
+df3$dist <- df3$dist_mid
+df3$shape <- "shape"
+
+df1 <- df[,c("dist","adjusted_ppm","Totalflux_umolpers","Wetland","shape")]
+df3 <- df3[,c("dist","adjusted_ppm","Totalflux_umolpers","Wetland","shape")]
+df1 <- rbind(df1,df3)
+
+```
+
+bind together tribs with the big data frame
+
+```{r bball fig, echo=FALSE}
+
+df_test<- df1%>%drop_na(adjusted_ppm)%>%filter(Wetland!="GAVItrib1")%>%filter(Wetland!="GAVItrib2")%>%filter(Wetland!="GAVItrib3")# %>% filter(dist>500)#%>%filter(Wetland!="COLM")
+
+
+```
+
+
+```{r bball fig, echo=FALSE}
 
 MyTheme <-  theme_bw() + 
   theme(axis.text=element_text(size=18),
@@ -380,23 +578,41 @@ MyTheme <-  theme_bw() +
     legend.text=element_text(size=18))+
   theme(aspect.ratio=1)
 
-df$shape <- "shape"
-bball <- ggplot(df%>%drop_na(adjusted_ppm)%>%filter(Wetland!="GAVItrib1")%>%filter(Wetland!="GAVItrib2")%>%filter(Wetland!="GAVItrib3")# %>% filter(dist>500)#%>%filter(Wetland!="COLM")
+
+bball <- ggplot(df_test%>%drop_na(adjusted_ppm)#%>%filter(Wetland!="GAVItrib1")%>%filter(Wetland!="GAVItrib2")%>%filter(Wetland!="GAVItrib3")# %>% filter(dist>500)#%>%filter(Wetland!="COLM")
        , aes(x=dist, y=Totalflux_umolpers, group=Wetland)) +
   geom_line(aes(#linetype=Wetland,
     color=Wetland),
     size=3) +
-  geom_point(aes(shape = shape),color="black",
-    size=2)+
+  geom_point(aes(shape = shape,fill=Wetland), size=2)+
     ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
   xlab("Distance [m]") +
-  scale_color_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan")) +
-  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan")) +
-  scale_shape_manual(name="Sample Point", labels="", values = 17) +
+  scale_color_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan","Tributary 1","Tributary 2")) +
+  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan","Tributary 1","Tributary 2")) +
+  scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
   MyTheme
 
 
 bball
+
+#zoom in
+bball_zoom <- ggplot(df_test%>%drop_na(adjusted_ppm)%>%filter(Wetland!="GAVItrib1")%>%filter(Wetland!="GAVItrib2")%>%filter(Wetland!="GAVItrib3")# %>% filter(dist>500)#%>%filter(Wetland!="COLM")
+       , aes(x=dist, y=Totalflux_umolpers, group=Wetland)) +
+  geom_line(aes(#linetype=Wetland,
+    color=Wetland),
+    size=3) +
+  geom_point(aes(shape = shape,fill=Wetland), size=2)+
+    ylab(expression(paste("Cumulative CO"[2]," Flux [",mu,"mol ", s^-1,"]"))) + 
+  xlab("Distance [m]") +
+  scale_color_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan","Tributary 1","Tributary 2")) +
+  scale_linetype_discrete(name="Stream Reach",labels=c("Antenas", "Colmillo","Gavilan","Tributary 1","Tributary 2")) +
+  scale_shape_manual(name="Sample Point", labels=c("",""), values = 21) +
+  xlim(-10, 400) +
+  ylim(-20, 200) +
+  MyTheme
+
+
+bball_zoom
 
 # Extract the legend. Returns a gtable
 leg <- get_legend(bball)
@@ -410,6 +626,11 @@ ggsave("testing123.png",plot = bball, dpi = 360, units = "cm")
 ggsave("testing123.png", plot = bball, device = NULL, path = NULL,
        scale = 1, width = 25, height = 20, dpi = 360, limitsize = TRUE,
        units = c("cm"))
+
+
+#0-500 m
+#0- 400
+#filled circle sample color as ln but outer in black
 
 ```
 
