--- a/KriddieFolder/SynopFigures_2022-09-05.Rmd
+++ b/KriddieFolder/SynopFigures_2022-09-05.Rmd
@@ -178,77 +178,59 @@ gaviplot <- qmplot(lon_fit,lat_fit, data = df%>%filter(Wetland_3=="Gavilan River
     legend.text=element_text(size=14)) 
 
 ### c.
+#subtract 523m from outlet
+df_fig2[df_fig2$Wetland_4 == 'Gavilan Outlet',]$dist <- df_fig2[df_fig2$Wetland_4 == 'Gavilan Outlet',]$dist - 523
 
-p1 <- ggplot(df_fig2 %>%filter(Wetland!="Gavi-mainstem")%>%filter(Wetland!="COLM")%>%filter(Wetland!="GAVItrib3")
-       , aes(x = dist, y = log(adjusted_ppm) , color=Wetland)) +
-  facet_grid(.~Wetland, scales = "free") +
-#  ylim(-100,15000)+
-  geom_point(size=3) +
-  ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
-  xlab("Distance downstream [m]") +
-      geom_smooth(method='lm')+
-  theme(axis.text=element_text(size=10),
-  axis.title=element_text(size=18,face="bold")) +
-  theme_classic() +
-  scale_color_discrete(name=NULL,labels=c("Antenas", "Gavilan Tributary 1","Gavilan Tributary 2"))+
-  theme(panel.spacing = unit(.05, "lines"),
-        panel.border = element_rect(color = "black", fill = NA, size = 1), 
-        strip.background = element_rect(color = "black", size = 1))+ 
-  theme( strip.text.x = element_blank(),
-         axis.text = element_blank())+ 
- theme(#axis.text=element_text(size=14),
-        axis.title=element_text(size=16)) +
-#  theme(legend.text=element_text(size=16))+
-  theme(aspect.ratio=1)+
-  theme(legend.title=element_text(size=18), 
-    legend.text=element_text(size=16),
-    legend.position = "right") 
-
- 
 p2 <- ggplot(df_fig2%>%drop_na(Wetland)%>%filter(Wetland_4!="Gavilan Inlet")%>%
              filter(Wetland!="COLM")%>%filter(Wetland!="GAVItrib3")
        , aes(x = dist, y = log10(adjusted_ppm), color=Wetland)) +
-  facet_grid(.~Wetland_4, scales = "free") +
+  facet_grid(rows = vars(Wetland_4)#, scales = "free" 
+             ) +
   geom_point(size=3) +
   ylab(expression(paste(italic('p'),"CO"[2] ," [ppm]"))) +
   xlab("Distance downstream [m]") +
       geom_smooth(method='lm')+
   theme(axis.text=element_text(size=10),
   axis.title=element_text(size=18,face="bold")) +
-  theme_classic() +
-  scale_color_discrete(name=NULL,labels=c("Antenas", "Gavilan Tributary 1","Gavilan Tributary 2"))+
+ theme_bw() +
+  scale_color_discrete(name=NULL,labels=c("Antenas", "Gavilan Outlet","Gavilan Tributary 1","Gavilan Tributary 2"))+
   theme(panel.spacing = unit(.05, "lines"),
         panel.border = element_rect(color = "black", fill = NA, size = 1), 
-        strip.background = element_rect(color = "black", size = 1))+ 
-  theme(# strip.text.x = element_blank(),
- #        axis.text = element_blank(),
-         axis.title=element_text(size=16),
+        strip.background = element_rect(color = "black", size = 1))+
+  theme(legend.text=element_text(size=16),
+        legend.key.size = unit(1, 'cm')) +
+  theme(axis.title=element_text(size=16),
          axis.text=element_text(size=14))+ 
-  theme(aspect.ratio=1) +
-  theme(legend.position = "none") +
+#  theme(aspect.ratio=1) +
+#  theme(legend.position = "none") +
+  theme(
+  strip.background = element_blank(),
+  strip.text.x = element_blank(),
+  strip.text.y = element_blank()
+) +
   scale_y_continuous(breaks=c(log10(300),log10(1000), log10(3000), log10(10000)), labels=c("300","1,000","3,000","10,000")) 
 
 
-# Extract the legend. Returns a gtable
-leg <- get_legend(p1)
 
-# Convert to a ggplot and print
-legplot <- as_ggplot(leg)
-
-
-bottomrow <- p1
-
-figure <- ggarrange(rivernetwork, gaviplot, p2, legplot,
-                    labels = c("A","B","C",""),
-                    ncol = 2, nrow = 2,
-                   align = "hv",
+figure1 <- ggarrange(rivernetwork, gaviplot,
+                    labels = c("A","B"),
+                    ncol = 1, nrow = 2,
+               #    align = "hv",
                     widths = c(1, .8),
-                  heights = c(.6,.4),
+              #    heights = c(.6,.4),
+                  font.label = list(size = 25, color = "black", face = "bold", family = NULL, position = "top"))
+
+figure2 <- ggarrange(figure1, p2,
+                    labels = c("","C"),
+                    ncol = 2, nrow = 1,
+              #     align = "hv",
+               #     widths = c(1, .8),
+              #    heights = c(.6,.4),
                   font.label = list(size = 25, color = "black", face = "bold", family = NULL, position = "top"))
 
 
 
-figure
+
 
 
 
